--- a/main.css
+++ b/main.css
@@ -65,7 +65,15 @@ button:hover {
 /* ------------------------------------------- */
 /* --------------About styles----------------- */
 
+.orb-canvas {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+}
+
 .about {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-around;
